@@ -47,7 +47,7 @@ has 'value'          => is => 'ro',   isa => Any;
 
 # Public methods
 sub new_from_method {
-   my $class = shift; my $attr = ref $_[ 0 ] eq HASH ? $_[ 0 ] : { @_ };
+   my ($class, $attr) = @_;
 
    $class->can( $attr->{method} ) and return $class->new( $attr );
 
